--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "cd packages && cd server && npm run start:dev",
     "client": "cd packages && cd client && npm start",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "prod": "cd packages && cd client && npm run build && cd .. && cd server && npm start "
   },
   "repository": {
     "type": "git",
